# exchangelib

./: .codacy.yaml  .deepsource.toml  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  MANIFEST.in  README.md  dev-requirements.txt  pyproject.toml  settings.yml.ghenc  settings.yml.sample  setup.cfg  setup.py  test-requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml  python-package.yml
docs/: _config.yml  index.md
docs/exchangelib/: account.html  attachments.html  configuration.html  credentials.html  errors.html  ewsdatetime.html  extended_properties.html  fields.html  index.html  indexed_properties.html  properties.html  protocol.html  queryset.html  recurrence.html  restriction.html  settings.html  transport.html  util.html  version.html  winzone.html
exchangelib/: __init__.py  account.py  attachments.py  configuration.py  credentials.py  errors.py  ewsdatetime.py  extended_properties.py  fields.py  indexed_properties.py  properties.py  protocol.py  queryset.py  recurrence.py  restriction.py  settings.py  transport.py  util.py  version.py  winzone.py
exchangelib/autodiscover/: __init__.py  cache.py  discovery.py  discovery_pox.py  properties.py  protocol.py
exchangelib/folders/: __init__.py  base.py  collections.py  known_folders.py  queryset.py  roots.py
exchangelib/items/: __init__.py  base.py  calendar_item.py  contact.py  item.py  message.py  post.py  task.py
exchangelib/services/: __init__.py  archive_item.py  common.py  convert_id.py  copy_item.py  create_attachment.py  create_folder.py  create_item.py  create_user_configuration.py  delete_attachment.py  delete_folder.py  delete_item.py  delete_user_configuration.py  empty_folder.py  expand_dl.py  export_items.py  find_item.py  (+34 more)
scripts/: notifier.py  optimize.py  wipe_test_account.py
tests/: __init__.py  common.py  test_account.py  test_attachments.py  test_autodiscover.py  test_autodiscover_pox.py  test_autodiscover_soap.py  test_build.py  test_configuration.py  test_credentials.py  test_errors.py  test_ewsdatetime.py  test_extended_properties.py  test_field.py  test_folder.py  test_properties.py  test_protocol.py  test_queryset.py  test_recurrence.py  test_restriction.py  test_services.py  test_source.py  test_sync.py  test_transport.py  test_util.py  test_version.py
(+88 files in other folders)
